<resources>
    <string name="app_name">TrainCalc</string>
    <string name="title_size_calc">Size Calculator</string>
    <string name="menu_size_calc">Size Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gauge">Gauge</string>
    <string name="title_scales">Scales</string>
    <string name="title_gauge">Gauge (G)</string>
    <string name="title_model_calculator">Model Calculator</string>
    <string name="menu_guiding_rails">Guiding Rails</string>
    <string name="label_guiding_rails_min_distance">Min. distance</string>
    <string name="menu_curve_radius">Curve radius</string>
    <string name="label_minimum_radius">Minimum radius</string>
    <string name="menu_cant_in_curves">Cant in curves</string>
    <string name="menu_cant">Cant in curves</string>
    <string name="menu_track_distance">Track distance</string>
    <string name="title_track_distance">Track distance (d)</string>
    <string name="menu_overhead_wire_position">Overhead wire position</string>
    <string name="title_overhead_wire_position">Overhead wire position</string>
    <string name="label_max_horiz_deflection">Max horiz. deflection</string>
    <string name="label_overhead_height">Height (h)</string>
    <string name="label_overhead_height_highest">highest</string>
    <string name="label_overhead_height_normal">normal</string>
    <string name="label_overhead_distance_of_masts">Distance of masts</string>
    <string name="label_overhead_height_lowest">lowest</string>
    <string name="label_overhead_curve_radius">curve radius</string>
    <string name="menu_rail_height">Rail height</string>
    <string name="title_rail_height">Rail height</string>
    <string name="label_rail_height_proto">Proto height (1:1)</string>
    <string name="label_rail_height_scaled">Scaled height</string>
    <string name="label_rail_height_nem_profil">Profil (NEM)</string>
    <string name="label_rail_height_nmra_code">CODE (NMRA)</string>
    <string name="title_clearance">Clearance</string>
    <string name="menu_clearance">Clearance</string>
    <string name="label_top_of_the_rails">Top of the rails</string>
    <string name="menu_trackbed">Trackbed</string>
    <string name="title_fragment_trackbed">Trackbed</string>
    <string name="title_dcc_wire_colors">DCC wire colors</string>
    <string name="menu_dcc_wire_colors">DCC wire colors</string>
    <string name="wire_red">RED</string>
    <string name="dcc_red_wire_text">right-hand or center rail power pick-up</string>
    <string name="dcc_wire_black">BLACK</string>
    <string name="dcc_black_wire_text">left-hand rail power pick-up</string>
    <string name="dcc_wire_orange">ORANGE</string>
    <string name="dcc_orange_wire_text">motor +</string>
    <string name="dcc_wire_gray">GRAY</string>
    <string name="dcc_gray_wire_text">motor -</string>
    <string name="dcc_wire_white">WHITE</string>
    <string name="dcc_white_wire_text">front headlight(s)</string>
    <string name="dcc_wire_yellow">YELLOW</string>
    <string name="dcc_yellow_wire_text">rear headlight(s)</string>
    <string name="dcc_wire_blue">BLUE</string>
    <string name="dcc_blue_wire_text">common (+) for headlights and outputs</string>
    <string name="dcc_wire_green">GREEN</string>
    <string name="dcc_green_wire_text">AUX 1</string>
    <string name="dcc_wire_violet">VIOLET</string>
    <string name="dcc_violet_wire_text">AUX 2</string>
    <string name="dcc_wire_brown">BROWN</string>
    <string name="dcc_brown_wire_text">Speaker</string>
    <string name="gauge_proto_gauge_1_1">Proto gauge (1:1)</string>
    <string name="label_gauge_scaled_gauge">Scaled gauge</string>
    <string name="label_nem_gauge">NEM Gauge (G)</string>
    <string name="label_scale">Scale</string>
    <string name="label_recommended_minimum_radius">Recommended minimum radius</string>
    <string name="label_curve_at_stations">at stations</string>
    <string name="label_curve_branch_lines">branch lines</string>
    <string name="label_curve_on_main_lines">on main lines</string>
    <string name="label_curve_comment">The minimum radius also depends on the rolling stocks you\'d like to run. Please check your vehicle\'s description to determine the minimum radius on your layout.</string>
    <string name="label_cant_maximum_elevation">Maximum elevation (c)</string>
    <string name="label_track_dist_at_stations">at stations</string>
    <string name="label_track_dist_radius">radius</string>
    <string name="label_track_dist_distance">distance</string>
    <string name="label_track_dist_minimum_distance">Minimum distance</string>
    <string name="label_track_dist_in_curves">in curves</string>
    <string name="label_track_dist_on_lines">on lines</string>
    <string name="label_overhead_distance">distance</string>
    <string name="label_scaled_size">Scaled size</string>
    <string name="label_dcc_calc">Common DCC registers (CV)</string>
    <string name="label_scale_ext">Scale</string>

    <string name="gauge_proto_size_1_1">Proto size (1:1)</string>
    <string name="dcc_cv1_text">Primary Address</string>
    <string name="dcc_cv2_text">Vstart</string>
    <string name="dcc_cv3_text">Acceleration Rate</string>
    <string name="dcc_cv4_text">Deceleration Rate</string>
    <string name="dcc_cv5_text">Vhigh</string>
    <string name="dcc_cv6_text">Vmid</string>
    <string name="dcc_cv7_text">Version No.</string>
    <string name="dcc_cv8_text">Manufactured ID</string>
    <string name="dcc_cv9_text">Total PWM Period</string>
    <string name="dcc_cv10_text">EMF Feedback Cutout</string>
    <string name="dcc_cv11_text">Packet Time-Out Value</string>
    <string name="dcc_cv12_text">Power Source Conversion</string>
    <string name="dcc_cv13_text">Alternate Mode Function Status F1-F8</string>
    <string name="dcc_cv14_text">"Alternate Mode Function. Status FL,F9-F12 "</string>
    <string name="dcc_cv15_16_text">Decoder Lock</string>
    <string name="dcc_cv17_18_text">Extended Address</string>
    <string name="dcc_cv19_text">Consist Address</string>
    <string name="dcc_cv20_text">Reserved by NMRA for future use</string>
    <string name="dcc_cv21_text">Consist Addr Active for F1-F8</string>
    <string name="dcc_cv22_text">Consist Addr Active for FL-F9-F12</string>
    <string name="dcc_cv23_text">Acceleration Adjustment</string>
    <string name="dcc_cv24_text">Deceleration Adjustment</string>
    <string name="dcc_cv25_text">Speed Table/Mid-range Cab Speed Step</string>
    <string name="dcc_cv26_text">Reserved by NMRA for future use</string>
    <string name="dcc_cv27_text">"Decoder Automatic Stopping Configuration"</string>
    <string name="dcc_cv28_text">Bi-Directional Communication Configuration</string>
    <string name="dcc_cv29_text">Configuration Data #1</string>
    <string name="dcc_cv30_text">Error Information</string>
    <string name="dcc_cv31_text">Index High Byte</string>
    <string name="dcc_cv32_text">Index Low Byte</string>
    <string name="dcc_cv33_46_text">Output Loc. FL, F1-F12</string>
    <string name="dcc_cv65_text">"Kick Start "</string>
    <string name="dcc_cv66_text">Forward Trim</string>
    <string name="dcc_cv67_94_text">Speed Table</string>
    <string name="dcc_cv95_text">Reverse Trim</string>
    <string name="dcc_cv257_512_text">Indexed area</string>
    <string name="dcc_cv892_text">Decoder Load</string>
    <string name="dcc_cv893_text">Dynamic Flags</string>
    <string name="dcc_cv894_text">Fuel/Coal</string>
    <string name="dcc_cv895_text">Water</string>
    <string name="dcc_cv896_1024_text">SUSI Sound and Function Modules</string>
</resources>