<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.TrackDistanceFragment">


        <TextView
            android:id="@+id/txtNemGauge"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="bottom"
            android:text="---"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/btnScale" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:text="@string/label_nem_gauge"
            app:layout_constraintBottom_toBottomOf="@+id/txtNemGauge"
            app:layout_constraintStart_toStartOf="@+id/tvGaugeScale" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginEnd="18dp"
            android:gravity="bottom"
            android:text="mm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView5" />


        <TextView
            android:id="@+id/tvGaugeScale"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginStart="18dp"
            android:gravity="center_vertical"
            android:text="@string/label_scale"
            app:layout_constraintBottom_toBottomOf="@+id/btnScale"
            app:layout_constraintStart_toStartOf="parent" />

        <eu.highball.traincalc.ui.ScaleSelectorButton
            android:id="@+id/btnScale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@+id/txtNemGauge"
            app:layout_constraintTop_toTopOf="parent"
            app:name="--"
            app:norm="---"
            app:scale="1:--" />


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblTrackDistanceInCurves">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="210dp"
                android:layout_height="280dp"
                android:contentDescription="Gauge Image"
                android:src="@drawable/img_track_distance"
                app:srcCompat="@drawable/img_track_distance" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/lblTrackDistanceAtStations"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:text="@string/label_track_dist_at_stations"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/txtTrackDistanceAtStations"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="bottom"
            android:text="---"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/txtNemGauge"
            app:layout_constraintTop_toTopOf="@+id/lblTrackDistanceAtStations" />

        <TextView
            android:id="@+id/lblRecMinRadAtStationsMm"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginEnd="24dp"
            android:gravity="bottom"
            android:text="mm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/lblTrackDistanceAtStations" />


        <TextView
            android:id="@+id/lblTrackDistanceOnLines"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:text="@string/label_track_dist_on_lines"
            app:layout_constraintStart_toStartOf="@+id/lblTrackDistanceAtStations"
            app:layout_constraintTop_toBottomOf="@+id/lblTrackDistanceAtStations" />

        <TextView
            android:id="@+id/txtTrackDistanceOnLines"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="bottom"
            android:text="---"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/txtTrackDistanceAtStations"
            app:layout_constraintTop_toTopOf="@+id/lblTrackDistanceOnLines" />


        <TextView
            android:id="@+id/lblRecMinOnBranchLinesMm"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="bottom"
            android:text="mm"
            app:layout_constraintEnd_toEndOf="@+id/lblRecMinRadAtStationsMm"
            app:layout_constraintTop_toTopOf="@+id/txtTrackDistanceOnLines" />

        <TextView
            android:id="@+id/lblTrackDistanceRadius"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:text="@string/label_track_dist_radius"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/etnTrackDistanceRadius"
            android:layout_width="120dp"
            android:layout_height="32dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/txtTrackDistanceOnLines"
            app:layout_constraintTop_toTopOf="@+id/lblTrackDistanceRadius" />

        <TextView
            android:id="@+id/lblTrackDistanceRadiusMm"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="bottom"
            android:text="mm"
            app:layout_constraintEnd_toEndOf="@+id/lblRecMinOnBranchLinesMm"
            app:layout_constraintTop_toTopOf="@+id/lblTrackDistanceRadius" />

        <TextView
            android:id="@+id/lblTrackDistanceInCurves"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:text="@string/label_track_dist_distance"
            app:layout_constraintStart_toStartOf="@+id/lblTrackDistanceRadius"
            app:layout_constraintTop_toBottomOf="@+id/lblTrackDistanceRadius" />

        <TextView
            android:id="@+id/txtTrackDistanceInCurves"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="bottom"
            android:text="---"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/txtTrackDistanceOnLines"
            app:layout_constraintTop_toTopOf="@+id/lblTrackDistanceInCurves" />


        <TextView
            android:id="@+id/txtTrackDistanceInCurvesMm"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="bottom"
            android:text="mm"
            app:layout_constraintEnd_toEndOf="@+id/lblRecMinOnBranchLinesMm"
            app:layout_constraintTop_toTopOf="@+id/lblTrackDistanceInCurves" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_track_dist_minimum_distance"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_track_dist_in_curves"
            app:layout_constraintStart_toStartOf="@+id/lblTrackDistanceOnLines"
            app:layout_constraintTop_toBottomOf="@+id/lblTrackDistanceOnLines" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>